@@ -1,6 +1,10 @@
 // $Id$
 // $Name$
 
+Image Picker  for D7 in DRUPAL-7--1, 20010-11-30
+------------------------------------
+by hutch, fixed block paste
+
 Image Picker  for D7 in DRUPAL-7--1, 20010-11-08
 ------------------------------------
 by hutch, added date format to config
